--- a/Julia vs Python Numba - Black Scholes.ipynb
+++ b/Julia vs Python Numba - Black Scholes.ipynb
@@ -366,12 +366,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia Version 0.6.2\n",
+      "Commit d386e40c17 (2017-12-13 18:08 UTC)\n",
+      "Platform Info:\n",
+      "  OS: macOS (x86_64-apple-darwin14.5.0)\n",
+      "  CPU: Intel(R) Core(TM) i5-4258U CPU @ 2.40GHz\n",
+      "  WORD_SIZE: 64\n",
+      "  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)\n",
+      "  LAPACK: libopenblas64_\n",
+      "  LIBM: libopenlibm\n",
+      "  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)\n"
+     ]
+    }
+   ],
+   "source": [
+    "versioninfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.3 :: Anaconda, Inc.\n"
+     ]
+    }
+   ],
+   "source": [
+    ";python -V"
+   ]
   }
  ],
  "metadata": {
