--- a/Julia vs Python Numba - Black Scholes.ipynb
+++ b/Julia vs Python Numba - Black Scholes.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Test Result\n",
     "\n",
-    "Method | Elapsed Time for 10 iterations\n",
+    "Method | Elapsed Time *per* iteration\n",
     "-------|--------------------------------\n",
     "Python Numpy | 783 ms\n",
     "Python Numba | 404 ms\n",
