--- a/BlackScholes.ipynb
+++ b/BlackScholes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Julia vs Numba Reality Check\n",
+    "## Benchmark - Julia vs Python Numba\n",
     "\n",
     "### Purpose\n",
     "\n",
